logs/tempo.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tempo'...
Compiling './lib/python3.5/site-packages/tempo/api.py'...
***   File "./lib/python3.5/site-packages/tempo/api.py", line 55
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tempo/db'...
Compiling './lib/python3.5/site-packages/tempo/db/api.py'...
***   File "./lib/python3.5/site-packages/tempo/db/api.py", line 91
    except NotFoundException, e:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tempo/db/migrate_repo'...
Listing './lib/python3.5/site-packages/tempo/db/migrate_repo/versions'...
Compiling './lib/python3.5/site-packages/tempo/db/migration.py'...
***   File "./lib/python3.5/site-packages/tempo/db/migration.py", line 46
    except versioning_exceptions.DatabaseNotControlledError, e:
                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tempo/db/models.py'...
***   File "./lib/python3.5/site-packages/tempo/db/models.py", line 51
    except IntegrityError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tempo-0.12.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
